# Placementgyaan

./: .breakpoints  .gitignore  README.md  api_routes.py  app.py  config.py  documentation.yaml  imp_thing.md  main.py  models.py  package-lock.json  pyproject.toml  requirement.txt  requirements.txt  test_example.py  vercel.json
instance/: testdb.sqlite3
static/css/: dashboard.css  profile.css
static/js/: .dashboard.js.3777636978~  admin.js  dashboard.js  login.js  profile.js
templates/: admin.html  dashboard.html  home.html  login.html  profile.html
