[tool.poetry]
name = "repl_nix_Placementgyaan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
Flask-RESTful = "^0.3.10"
Flask-JWT-Extended = "^4.5.2"
pytest = "^7.4.0"
api = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
